--- a/mypro2/pro/live.html
+++ b/mypro2/pro/live.html
@@ -85,10 +85,100 @@
     </div>
     <div class="topdy clearfix">
         <img src="../image/live/top.jpg-350" alt="" class="float-left"/>
-        <h1>生活DIY
-            <span>生活DIY</span>
+        <h1 class="">生活DIY
+            <span class="rspan">生活DIY</span>
         </h1>
         <span>肉丁网《生活DIY》栏目提供各种生活中的小创意。丰富的DIY手工制作教程和创意家居、创意生活图片案例让你在家中轻松制作各种玩具、饰品和生活用品。来肉丁网学习手工制作,让你的生活更加丰富多彩！</span>
+    </div>
+    <div class="content">
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="oo w-100 mr-1" style="background:url(../image/live/l1.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 " >
+                            <span><img src="../image/live/j.png" alt=""/></span>牙签和毛线手工编织精美首饰盒做法图解教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/live/l2.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/live/j.png" alt=""/></span>用纸盒和毛球DIY漂亮的小海龟笔筒做法图解教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="oth w-100 mr-1" style="background:url(../image/live/l3.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">生态板DIY简单实用的桌柜做法教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0">
+                <div class=" t1">
+                    <a href="">
+                        <div class="of w-100 mr-1" style="background:url(../image/live/l4.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">手工布艺自制发饰制作方法图解教程</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row m-0 mt-3">
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="oo w-100 mr-1" style="background:url(../image/live/l5.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 " >
+                            <span><img src="../image/live/j.png" alt=""/></span>铁丝和珍珠制作时尚公主风绕线手镯教程</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/live/l6.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/live/j.png" alt=""/></span>美哒哒的公主风树枝花环的做法</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0 pr-2">
+                <div class="mr-1 t1">
+                    <a href="">
+                        <div class="oth w-100 mr-1" style="background:url(../image/live/l7.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        </div>
+                        <div class="t1_2 ">手工艺术品制作 用书钉做玫瑰方法</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-3 p-0">
+                <div class=" t1">
+                    <a href="">
+                        <div class="of w-100 mr-1" style="background:url(../image/live/l8.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/live/l8.jpg" alt=""/>
+                        </div>
+                        <div class="t1_2 ">手工布艺小森式手工烫花棉麻耳环</div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
